--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -1,22 +1,25 @@
-body {
-    background-color: #A0B3A3;
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-ul {
-    flex-direction: column;
+header {
     float: right;
-    flex-wrap: wrap;
-    display: flex;
-    justify-content: space-between;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+    background-color: #A0B3A3;
 }
 
 li {
     display: flex;
 }
 
-header {
+.menu {
+    flex-direction: column;
     float: right;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
 }
 
 .menu-img {
